# rust-snappy

./: Cargo.toml  README.md
benches/: bench.rs
snappy-sys/: Cargo.toml
snappy-sys/snappy/testdata/: plrabn12.txt
src/: lib.rs
