[package]
name = "tetsy-snappy"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tetcoin/tetsy-rust-snappy"
description = "Rust bindings for the snappy compression library"
keywords = ["snappy"]

[dependencies]
libc = "0.2"
tetsy-snappy-sys = { path = "snappy-sys", version = "0.1" }

[dev-dependencies]
rand = "0.5"
